# rusty_raft

./: .bazelrc  .gitignore  BUILD  Cargo.toml  Dockerfile  MODULE.bazel  README.md  TODO.md  WORKSPACE  build.rs  challenge_writeup.md
simulations/: mod.rs  run_five_clients.rs  run_n_clients.rs  run_one_client.rs  run_three_clients.rs  run_two_clients.rs
src/: main.rs  raft_protobufs.rs
src/raft/: client.rs  color.rs  log.rs  mod.rs  protobufs.rs  raft.rs  rusty_raft.rs  server.rs  service.rs  state.rs  time.rs  types.rs
src/raft/proto/: raft.proto
